--- a/C#/ServiPlusApp/ServiPlusApp/View/SetTables/Usuarios/Usuario.resx
+++ b/C#/ServiPlusApp/ServiPlusApp/View/SetTables/Usuarios/Usuario.resx
@@ -121,7 +121,7 @@
   <data name="bunifuPanel1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAucAAAAyCAYAAAD/a3V9AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAFxSURBVHhe7dgxTsNAFEXRKelRTAllSnZiiw1AyTKyc3Cw
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAFxSURBVHhe7dgxTsNAFEXRKelRTAllSnZiiw1AyTKyc3Cw
         C4q0cW5xnnSa0V/A1QwzMzMzM4vtZcxvpzFfAACA4zyPj/Oe5NvWx/fTWH4AAIDjTWNe9jT/i/O12m8f
         AgAA9zZf9jQX5wAA8FjiHAAAIsQ5AABEiHMAAIgQ5wAAECHOAQAgQpwDAECEOAcAgAhxDgAAEeIcAAAi
         xDkAAESIcwAAiBDnAAAQIc4BACBCnAMAQIQ4BwCACHEOAAAR4hwAACLEOQAARIhzAACIEOcAABAhzgEA
@@ -148,10 +148,34 @@
         4pkoPSwAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="txtTelefono.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAPUAAAAvCAYAAAA7FIwsAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAABYSURBVHhe7dZBCQAwEAPB+DdZJ9d+zkMhzHxWQSABAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAL6bmXOBGtkCJYwayuwJBzokD3DbcQfq
+        6F2MAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="bunifuTextBox2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAZUAAAAvCAYAAAArfVecAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAB2SURBVHhe7dgxDQAwDANB8ydZJmmXEKiS8W55CJYcAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAPhQVecCwIJ0AWDMqACwpk8wAJhKHuaP6fB9IsbUAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="bunifuTextBox1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAZUAAAAvCAYAAAArfVecAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAB2SURBVHhe7dgxDQAwDANB8ydZJmmXEKiS8W55CJYcAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAPhQVecCwIJ0AWDMqACwpk8wAJhKHuaP6fB9IsbUAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="btnContinuar.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAMgAAAAnCAYAAABKSgfJAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAADFSURBVHhe7d2xDcIwFEVRb+O0aVMxQIaiR8zADAzDPCEG
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAADFSURBVHhe7d2xDcIwFEVRb+O0aVMxQIaiR8zADAzDPCEG
         SxCJPAbIedJpLLe3/sXM/uxS6+la6xl4a030PEp5PQ7DAnRrEz2PTyC3cVzu0wSH1RrYDaR9eMwzHFZr
         QCCwQyAQCAQCgUAgEAgEAoFAIBAIBAKBQCAQCAQCgUAgEAgEAoFAIBAIBAKBQCAQCAQCgUAgEAgEAoFA
         IBAIBAKBQCAQCAQCgUAgEAgEAkEMxH0Qji7eBwG670DcKIStzY1CM/u1Up6d5d++uVYDIwAAAABJRU5E
@@ -183,7 +207,7 @@
   <data name="btnRegresar.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAKoAAAAnCAYAAACfWNOEAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAADKSURBVHhe7dyxDcJAEETR6+acOnVEAS6KHFEDNVAM9RiM
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAADKSURBVHhe7dyxDcJAEETR6+acOnVEAS6KHFEDNVAM9RiM
         LAEBTr0jvZFecrrwx9vMYnbp/XTt/QzVrG1umbb2fhyGBcp5tbll+gn1No7LfZrgcGuLf0NdPzzmGQ63
         tihUyhMqEYRKBKESQahEECoRhEoEoRJBqEQQKhGESgShEkGoRBAqEYRKBKESQahEECoRhEoEoRJBqEQQ
         KhGESgShEkGoRBAqEYRKBKESQahEECoRdkN1H5Uqdu+jQjnfobrhT1U/N/zNaq+1J1gW0XwF8O3WAAAA
@@ -215,7 +239,7 @@
   <data name="btnGuardar.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAKoAAAAnCAYAAACfWNOEAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAADKSURBVHhe7dyxDcJAEETR6+acOnVEAS6KHFEDNVAM9RiM
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAADKSURBVHhe7dyxDcJAEETR6+acOnVEAS6KHFEDNVAM9RiM
         LAEBTr0jvZFecrrwx9vMYnbp/XTt/QzVrG1umbb2fhyGBcp5tbll+gn1No7LfZrgcGuLf0NdPzzmGQ63
         tihUyhMqEYRKBKESQahEECoRhEoEoRJBqEQQKhGESgShEkGoRBAqEYRKBKESQahEECoRhEoEoRJBqEQQ
         KhGESgShEkGoRBAqEYRKBKESQahEECoRdkN1H5Uqdu+jQjnfobrhT1U/N/zNaq+1J1gW0XwF8O3WAAAA
@@ -225,7 +249,7 @@
   <data name="btnModificar.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAKoAAAAnCAYAAACfWNOEAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAACXSURBVHhe7dIxEYAwAMBAlNQy+EMGewsCENDc/fBT1hzj
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAACXSURBVHhe7dIxEYAwAMBAlNQy+EMGewsCENDc/fBT1hzj
         mve41oJ9zfsb9S/AXoxKglFJMCoJRiXBqCQYlQSjkmBUEoxKglFJMCoJRiXBqCQYlQSjkmBUEoxKglFJ
         MCoJRiXBqCQYlQSjkmBUEoxKglFJMCoJRiXBqCQYlQSjkmBUEoxKglFJMCoJRiXhGOd8/gJs45zPC/ZY
         Ni7wI3NEAAAAAElFTkSuQmCC
