--- a/C#/ServiPlusApp/ServiPlusApp/View/SetTables/Mantenimientos/Historial/Historial.resx
+++ b/C#/ServiPlusApp/ServiPlusApp/View/SetTables/Mantenimientos/Historial/Historial.resx
@@ -121,7 +121,7 @@
   <data name="bunifuPanel1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAABGAAAAIpCAYAAADtiU43AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAA7ESURBVHhe7dqxTcNAAIZRl2wROnO2C0bJCJSMkc0hVizR
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAA7ESURBVHhe7dqxTcNAAIZRl2wROnO2C0bJCJSMkc0hVizR
         pMJ8VO+XXnN3E3y6yczMzMzMzMzM/mnzPL+u63oDAAAA4Lxt296O7PLYsizv94svAAAAAP7OGON65Jdp
         uh/sZebpQwAAAAB+7XbkFwEGAAAAICLAAAAAAMQEGAAAAICYAAMAAAAQE2AAAAAAYgIMAAAAQEyAAQAA
         AIgJMAAAAAAxAQYAAAAgJsAAAAAAxAQYAAAAgJgAAwAAABATYAAAAABiAgwAAABATIABAAAAiAkwAAAA
@@ -190,7 +190,7 @@
   <data name="pnlBarraLateral.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAM4AAAGyCAYAAACsiPvKAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAASaSURBVHhe7dOhEYBAEMBA+rn+q6GYB/wzA9ErVkXnmJnz
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAASaSURBVHhe7dOhEYBAEMBA+rn+q6GYB/wzA9ErVkXnmJnz
         toDvnnG2AXhnHAiMA4FxIDAOBMaBwDgQGAcC40BgHAiMA4FxIDAOBMaBwDgQGAcC40BgHAiMA4FxIDAO
         BMaBwDgQGAcC40BgHAiMA4FxIDAOBMaBwDgQGAcC40BgHAiMA4FxIDAOBMaBwDgQGAcC40BgHAiMA4Fx
         IDAOBMaBwDgQGAcC40BgHAiMA4FxIDAOBMaBwDgQGAcC40BgHAiMA4FxIDAOBMaBwDgQGAcC40BgHAiM
@@ -213,10 +213,19 @@
         48Bvsy7VGPiCqqH1ZgAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="btnMantenimientos.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAALYAAAAtCAYAAAADUZGEAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAACrSURBVHhe7dLBCcNAEARBRWaD8s/AYeh++5C5C6OpgYIJ
+        oK+11u81C203fe1zfz+QsSdscoRNkrBJEjZJwiZJ2CQJmyRhkyRskoRNkrBJEjZJwiZJ2CQJmyRhkyRs
+        koRNkrBJEjZJwiZJ2CQJmyRhkyRskoRNkrBJEjZJwiZJ2CQJmyRhkyRskoRNkrBJEjZJwiZJ2CQJmyRh
+        kyRskoRN0gl7Zp7zzCKbmecPnJ2wPHgFWxkAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="bunifuSeparator1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABEAAAGyCAYAAAACki8OAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAk1SURBVHhevZ15rG3nHIYvMY+pKdRMqJmYi8YYSiiiZho1
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAk1SURBVHhevZ15rG3nHIYvMY+pKdRMqJmYi8YYSiiiZho1
         q5i1xHRT81CzoobSywnnkOveffYaTg8uRWOoOSgxVzV32Ofsc8o13+M9yfP+K3nz/eJJnn+e5Ev2Xvtb
         e+1hrW/t+F9sbW1dxpJyNPiylpSzb+fOy1lSzgVnnXV5S8rZWlq6giXlHOn7K1pSzta+fVeypJwji4tX
         tqScS3btuqol5exfWrqaJeUc3LPn6paUc6jvr2FJOWurq9e0pJw/LCwcZUk588XFa1lSzsbu3de2pJzN
@@ -262,7 +271,7 @@
   <data name="btnTabServicios.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAALYAAAAtCAYAAAADUZGEAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAACrSURBVHhe7dLBCcNAEARBRWaD8s/AYeh++5C5C6OpgYIJ
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAACrSURBVHhe7dLBCcNAEARBRWaD8s/AYeh++5C5C6OpgYIJ
         oK+11u81C203fe1zfz+QsSdscoRNkrBJEjZJwiZJ2CQJmyRhkyRskoRNkrBJEjZJwiZJ2CQJmyRhkyRs
         koRNkrBJEjZJwiZJ2CQJmyRhkyRskoRNkrBJEjZJwiZJ2CQJmyRhkyRskoRNkrBJEjZJwiZJ2CQJmyRh
         kyRskoRN0gl7Zp7zzCKbmecPnJ2wPHgFWxkAAAAASUVORK5CYII=
@@ -271,7 +280,7 @@
   <data name="btnTabRepuestos.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAALYAAAAtCAYAAAADUZGEAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAACrSURBVHhe7dLBCcNAEARBRWaD8s/AYeh++5C5C6OpgYIJ
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAACrSURBVHhe7dLBCcNAEARBRWaD8s/AYeh++5C5C6OpgYIJ
         oK+11u81C203fe1zfz+QsSdscoRNkrBJEjZJwiZJ2CQJmyRhkyRskoRNkrBJEjZJwiZJ2CQJmyRhkyRs
         koRNkrBJEjZJwiZJ2CQJmyRhkyRskoRNkrBJEjZJwiZJ2CQJmyRhkyRskoRNkrBJEjZJwiZJ2CQJmyRh
         kyRskoRN0gl7Zp7zzCKbmecPnJ2wPHgFWxkAAAAASUVORK5CYII=
@@ -280,7 +289,7 @@
   <data name="pnlTxtSearch.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAABGAAAABQCAYAAABWOwMXAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAKHSURBVHhe7dqxTcNAAIZRl2wROnO2C0bJCJSMkc0hVizR
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAKHSURBVHhe7dqxTcNAAIZRl2wROnO2C0bJCJSMkc0hVizR
         pMJ8VO+XXnN3E3y6yczMzMzMzMzM/mnzPL+u63oDAAAA4Lxt296O7PLYsizv94svAAAAAP7OGON65Jdp
         uh/sZebpQwAAAAB+7XbkFwEGAAAAICLAAAAAAMQEGAAAAICYAAMAAAAQE2AAAAAAYgIMAAAAQEyAAQAA
         AIgJMAAAAAAxAQYAAAAgJsAAAAAAxAQYAAAAgJgAAwAAABATYAAAAABiAgwAAABATIABAAAAiAkwAAAA
@@ -294,83 +303,10 @@
         L2ZmZmZmZmZm1m2avgHSbm19G4LddQAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="bunifuButton21.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAC0AAAArCAYAAADsQwGHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAABfSURBVFhH7c47DQAgEMBQhEDOxfn3gQwE8NmZG0g6vKlL
-        S7Ts2/xIP9O38DSnKU5TnKY4TXGa4jTFaYrTFKcpTlOcpjhNcZriNMVpitMUpylOU5ymOE0pUXPcwrNq
-        jgX0fuVUxZBgcQAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="bunifuButton21.IdleIconLeftImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        3QAAAN0BcFOiBwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAASJSURBVFhHtZVd
-        bFNlGMePCSZGEu803im6fkAM4cJEvZNLr7xhDAebyIcfGDNFQ2JEGO5CwlDDbnXRbGzsi61C1nbdxoG1
-        I4Br19Z1tk0/13POus8ENJCtca/v/7Rnnp49HUXLkl9zztn7Pv//+7zv+zwCY4wkqCxaQ6mFc+H04nh4
-        ZlH2xebuev6Q0+NhecAdlk56IrNvDQWyW6m5jwL5cTq18GMks5QLJubZnegs48KlSHrC0m4qRrkUvfye
-        WN4ZzSwpEIaAzZdZPONMRI/2xtN726N3azuii8f6E/Hm0VTYGZTvFUyscVomJpSn9bHKZf0B4rHM8mph
-        xWsNtnjs7Z/Dawe64uxIf4p9fDXDPnXI7JNBiX1gS7P3epN/NY+mQwUTYIL/PakPXg7rD3zl0q2Iwvq9
-        0nx1e+TPPW1RVfRzp8JOjc6yJjHLvrmWZV8Oz6pGQINdYifsGZ8Yku/DxPi00qQPXg7qD/bcn0/7GsTr
-        uuPsMy4A0ZbxhSK+d8+vG9BoEmVPIQs5T1h51SiyGeppj8wsryIA0o6VQ7x5bH6D+Dn+7auRfzOgp8sr
-        BQompiihUgi4av74nHrgsOdIu3HleD/u3Ciq57hDlgoGmDs69xIlRiHgnt+KzDKcdhw4CF3QiZdaMYUj
-        KM2oBsJSNSVGIURmljKYhKuG0/41F9SvnBIqxS+35ZuIxYvVWUqMQvDGsqhwDPcc6W/kJ10z8LC0G/lW
-        lK4jFsdFiVEIfHAak1BkEOT0aN4ADpxR4GGcH1NExHL5k0FKjEJAbcckVDgUmRNDCvuOX7WTj7D3Ghd/
-        U27fCEnM4UuIlBiFoDYWbgDlFRWOClwuI1NKdiSYZk5/8gwlRiGgq8EAajvKKxW4HL5wyWpZdvqSbHAy
-        uosSoxDQUvnEZD4L6RDKKyWwGbxwrVwNSPExnv5BXyJrFNkM9QctlRtAV1NrOyWyGT+4FbUU871fHQ5I
-        rxtFNmP9gQdoQRA0FtR2SsgIVg5xNzc/HEgzx0TCpg9eDusP6OfcwARMANR2lFdKGGDPkXaMdflT7Mqd
-        GPvJPrnS4Zose/9B0Qv6OVoqD5rTjKC8osKhyOCe46rhtON/Y3zP7d54DitvdfgftDomWavdd3/g/VfO
-        DxyyHtTHLgX5ES2VC0xpJvTgno8g3b4EF0/MaXs+KIae/9U97e072zDl/MjKXMeszHbYesoY2wj5UQNd
-        DY0FtZ2Lu1DhnN7kNdxz6qrZju5ovvyuhfXVW5jYsD1v4pD1Apd5wjhWg/z4X+k9YD7dvsfEQPd+MxvK
-        Z4FjaRMb39xCzdnw4f9yaZ/ZozeRN6ByRTz44lPG8UUvlaLzHVOohIkb9v1Vz+jHFk2sFI2NwpbOfaaZ
-        EiZ8/R++/Jw2dsPkStFWt3NrZ415oYSJyOXD21/AOHJypeiprnq2o8Z8jzLB64TSV7fjNXJiJWmrs2zr
-        qDE9oExcqrXcJCdVmoFa066OanNOM9FVa2Y9dRbGt2iFnPA46K637L641/S3ZkLNRq3lOjn4cdFTX/UG
-        rxPTWDnEe45Ytv0DN8jQ611i+fYAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="bunifuButton21.OnIdleState.IconLeftImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        3QAAAN0BcFOiBwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAASJSURBVFhHtZVd
-        bFNlGMePCSZGEu803im6fkAM4cJEvZNLr7xhDAebyIcfGDNFQ2JEGO5CwlDDbnXRbGzsi61C1nbdxoG1
-        I4Br19Z1tk0/13POus8ENJCtca/v/7Rnnp49HUXLkl9zztn7Pv//+7zv+zwCY4wkqCxaQ6mFc+H04nh4
-        ZlH2xebuev6Q0+NhecAdlk56IrNvDQWyW6m5jwL5cTq18GMks5QLJubZnegs48KlSHrC0m4qRrkUvfye
-        WN4ZzSwpEIaAzZdZPONMRI/2xtN726N3azuii8f6E/Hm0VTYGZTvFUyscVomJpSn9bHKZf0B4rHM8mph
-        xWsNtnjs7Z/Dawe64uxIf4p9fDXDPnXI7JNBiX1gS7P3epN/NY+mQwUTYIL/PakPXg7rD3zl0q2Iwvq9
-        0nx1e+TPPW1RVfRzp8JOjc6yJjHLvrmWZV8Oz6pGQINdYifsGZ8Yku/DxPi00qQPXg7qD/bcn0/7GsTr
-        uuPsMy4A0ZbxhSK+d8+vG9BoEmVPIQs5T1h51SiyGeppj8wsryIA0o6VQ7x5bH6D+Dn+7auRfzOgp8sr
-        BQompiihUgi4av74nHrgsOdIu3HleD/u3Ciq57hDlgoGmDs69xIlRiHgnt+KzDKcdhw4CF3QiZdaMYUj
-        KM2oBsJSNSVGIURmljKYhKuG0/41F9SvnBIqxS+35ZuIxYvVWUqMQvDGsqhwDPcc6W/kJ10z8LC0G/lW
-        lK4jFsdFiVEIfHAak1BkEOT0aN4ADpxR4GGcH1NExHL5k0FKjEJAbcckVDgUmRNDCvuOX7WTj7D3Ghd/
-        U27fCEnM4UuIlBiFoDYWbgDlFRWOClwuI1NKdiSYZk5/8gwlRiGgq8EAajvKKxW4HL5wyWpZdvqSbHAy
-        uosSoxDQUvnEZD4L6RDKKyWwGbxwrVwNSPExnv5BXyJrFNkM9QctlRtAV1NrOyWyGT+4FbUU871fHQ5I
-        rxtFNmP9gQdoQRA0FtR2SsgIVg5xNzc/HEgzx0TCpg9eDusP6OfcwARMANR2lFdKGGDPkXaMdflT7Mqd
-        GPvJPrnS4Zose/9B0Qv6OVoqD5rTjKC8osKhyOCe46rhtON/Y3zP7d54DitvdfgftDomWavdd3/g/VfO
-        DxyyHtTHLgX5ES2VC0xpJvTgno8g3b4EF0/MaXs+KIae/9U97e072zDl/MjKXMeszHbYesoY2wj5UQNd
-        DY0FtZ2Lu1DhnN7kNdxz6qrZju5ovvyuhfXVW5jYsD1v4pD1Apd5wjhWg/z4X+k9YD7dvsfEQPd+MxvK
-        Z4FjaRMb39xCzdnw4f9yaZ/ZozeRN6ByRTz44lPG8UUvlaLzHVOohIkb9v1Vz+jHFk2sFI2NwpbOfaaZ
-        EiZ8/R++/Jw2dsPkStFWt3NrZ415oYSJyOXD21/AOHJypeiprnq2o8Z8jzLB64TSV7fjNXJiJWmrs2zr
-        qDE9oExcqrXcJCdVmoFa066OanNOM9FVa2Y9dRbGt2iFnPA46K637L641/S3ZkLNRq3lOjn4cdFTX/UG
-        rxPTWDnEe45Ytv0DN8jQ611i+fYAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="txtSearch.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAtwAAAAvCAYAAADQMB33AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAF8SURBVHhe7daxTcQAAARBF8KLLtx/Hy7jCwALbegIuGxO
-        muwK2MPMzMzMzMb7fJ3X7QsAAPg3V7n9E9xPBwAA4A/KbcENAAAL5bbgBgCAhXJbcAMAwEK5LbgBAGCh
-        3BbcAACwUG4LbgAAWCi3BTcAACyU24IbAAAWym3BDQAAC+W24AYAgIVyW3ADAMBCuS24AQBgodwW3AAA
-        sFBuC24AAFgotwU3AAAslNuCGwAAFsptwQ0AAAvltuAGAICFcltwAwDAQrktuAEAYKHcFtwAALBQbgtu
-        AABYKLcFNwAALJTbghsAABbKbcENAAAL5bbgBgCAhXJbcAMAwEK5LbgBAGCh3BbcAACwUG4LbgAAWCi3
-        BTcAACyU24IbAAAWym3BDQAAC+W24AYAgIVyW3ADAMBCuS24AQBgodwW3AAAsFBuC24AAFgotwU3AAAs
-        lNuCGwAAFsptwQ0AAAvltuAGAICFcvsO7o/z/XQAAAB+6W7sctvMzMzMzDY7jm8TSACoEQSCgwAAAABJ
-        RU5ErkJggg==
-</value>
-  </data>
   <data name="pnlTabControl.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAABGAAAAArCAYAAAA33v4VAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAGPSURBVHhe7dqxTcNAAIZRlyzgs1yFkpJRMgIlY2RzYhNL
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAGPSURBVHhe7dqxTcNAAIZRlyzgs1yFkpJRMgIlY2RzYhNL
         NKkwH9X7pdfc3QSfbjIzMzMzMzMzs3/asiyvmxsAAAAA563r+nZkl8fmeX7fLr4AAAAA+DtjjOuRX75/
         v+xl5ulDAAAAAH7tduQXAQYAAAAgIsAAAAAAxAQYAAAAgJgAAwAAABATYAAAAABiAgwAAABATIABAAAA
         iAkwAAAAADEBBgAAACAmwAAAAADEBBgAAACAmAADAAAAEBNgAAAAAGICDAAAAEBMgAEAAACICTAAAAAA
